# set-rs

./: .gitignore  Cargo.toml  README.md  index.html  prek.toml
.github/workflows/: deploy.yml
src/: app.rs  event.rs  game.rs  input.rs  main.rs  ui.rs
