[package]
name = "set-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["terminal"]
terminal = ["dep:crossterm", "ratatui/crossterm"]
web = ["dep:ratzilla", "dep:web-time", "dep:web-sys"]

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", optional = true }
rand = "0.10"
ratatui = { version = "0.30.0", default-features = false }
ratzilla = { version = "0.3.0", optional = true }
web-sys = { version = "0.3", optional = true, features = ["DomRect"] }
web-time = { version = "1", optional = true }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

